<resources>
    <string name="app_name">Shell Hint</string>
    <string name="img_desc_logo">Offensive Security Logo</string>
    <string-array name="main_options">
        <item>NETWORK SCAN</item>
        <item>SHELL COMMANDS</item>
        <item>FORENSIC TOOLS</item>
    </string-array>
    <string name="plus_activity_logo">Change Theme</string>
    <string name="menu_action_send">Send</string>
    <string name="apply_button">Apply</string>
    <string name="theme_switch">Color Theme</string>

    <string name="NavigationFragment">Navigation</string>

    <string name="Navigation_Hints">Welcome to shell navigation hints.</string>

    <string-array name="UtList">
        <item>vim</item>
        <item>gcc</item>
        <item>git</item>
        <item>gdb</item>
    </string-array>

    <string-array name="SysList">
        <item>ps</item>
        <item>htop</item>
    </string-array>

    <string-array name="NetList">
        <item>netstat</item>
        <item>nmcli</item>
        <item>ip link</item>
    </string-array>

    <string name="swipe_tab_Navigation">Nav</string>
    <string name="swipe_tab_System">System</string>
    <string name="swipe_tab_Utilities">Platform</string>
    <string name="swipe_tab_Network">Network</string>

    <string name="create_command_hint">Enter new command</string>
    <string name="create_description_hint">Enter description</string>


    <!-- Forensic section -->
    <string name="forensic_panel_txt1">Computer Forensics</string>
    <string name="forensic_panel_txt2">Digital investigation and analysis</string>
    <string name="forensic_panel_menu_inbox">Cases</string>
    <string name="forensic_panel_menu_drafts">Drafts</string>
    <string name="forensic_panel_menu_sent_cases">Reported Cases</string>
    <string name="forensic_panel_menu_closed_cases">Closed Cases</string>
    <string name="forensic_panel_menu_support">Support</string>
    <string name="forensic_panel_menu_help">Request Help</string>
    <string name="forensic_panel_menu_feedback">Feedback</string>

    <string name="forensic_open_panel">Open navigation drawer</string>
    <string name="forensic_close_panel">Close navigation drawer</string>

    <string name="favorite">Favorite</string>
    <string name="favorite_main_menu">Important Commands (favorites) :            </string>

</resources>
